app/assets/stylesheets/custom.css.scss
/*** Mixins and Variables ***/

@mixin box_sizing {
  -moz-box-sizing:    border-box;
  -webkit-box-sizing: border-box;
  box-sizing:         border-box;
}

/* miscellaneous */

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  background-color: #ddd;
  border: 1px solid #000;
  @include box_sizing;
}


/*** Global ***/

body {
	margin: 0;
	padding: 0;
	font-size: 32px;
}
.main-content {
	width: 90%;
	margin: 0 auto 0;
}

h1 {
	font-size: 2em;
}
.delete-link {
	color: red;
}

.button-large {
	padding: 10px;
	font-size: 1.5em;
	background-color: blue;
	color: white;
	border: none;
	border-radius: 10px;
}

.button-normal{
	padding: 0.2em;
	font-size: 1em;
	background-color: blue;
	color: white;
	border: none;
	position: relative;
	top: -2px;
	border-radius: 4px;
}
.submit-button {
	width: 9em;
	padding: 0.3em;
	margin: 1em auto 0;
	font-size: 1.5em;
	background-color: #40708E;
	color: white;
	border: none;
	border-radius: 0.25em;
}
.delete-button {
	background-color: red;
	font-size: 1em;
	color: white;
	padding: 4px;
	border: none;
	border-radius: 4px;
	position: relative;
	top: -2px;
}
.tooltip {
	padding: 5px;
	font-size: 1em;
	background-color: #999;
	color: white;
	border: none;
	position: relative;
	top: -2px;
	border-radius: 4px;
	margin-left: 5px;
}

a {
	text-decoration: none;
}

.center {
	text-align: center;
}



/*** Pagination ***/

.pagination {
  background: white;
  cursor: default;
  /* self-clearing method: */ 
}
  .pagination a, .pagination span, .pagination em {
  	font-size: 1em;
  	height: 1.15em;
    padding: 0.33em 0.66em;
    display: block;
    float: left;
    margin: 1em 0;
  }
  .pagination .disabled {
    display: none 
  }
  .pagination .current {
    font-style: normal;
    font-weight: bold;
    background: #2e6ab1;
    color: white;
    border: 3px solid #2e6ab1; 
  }
  .pagination a {
    text-decoration: none;
    color: #105cb6;
    border: 3px solid #2e6ab1; 
    border-left: none;
    &.previous_page {
    	border-left: 3px solid #2e6ab1;
    }
  }
  .pagination a:hover, .pagination a:focus {
    color: #000033;
    border-color: #000033; 
  }
  .pagination:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden; }
  * html .pagination {
    height: 1%; }
  *:first-child + html .pagination {
    overflow: hidden; }



/*** Forms ***/

form.simple_form {
	font-size: 1.5em;
	label {
		font-size: 1em;
		text-transform: uppercase;
		display: block;
		margin: 1em 0 0.2em;
	}
	select {
		font-size: 1em;
		padding: 0.2em;
		-webkit-appearance: none;
		width: 9em;
		border: 3px solid #000;
		background-image: image-url("arrow.png");
		background-repeat: no-repeat;
		background-position: right center;
	}
	input[type=text] {
		font-size: 1em;
		padding: 0.2em;
		width: 10em;
		border: 3px solid #000;
		border-radius: 0.2em;
		&.currency-string {
			width: 10em;
		}
	}
	input.email, input.password {
		// height: 1em;
		width: 9em;
		border: 3px solid #000;
		border-radius: 5px;
	}
	input[type=radio], 
	input[type=checkbox] {
		margin-right: 5px;
	}
	input[type=number] {
		height: 30px;
		width: 150px;
		border: 1px solid #000;
		border-radius: 5px;
	}
	textarea {
		height: 5em;
		width: 100%;
		border: 3px solid #000;
		border-radius: 0.2em;
	}
	.radio label {
		text-transform: none;
	}
}

/*** Error Messages ***/

#error-explanation {
	border: 4px solid red;
	border-radius: 0.5em;
	color: red;
	width: 17em;
	.alert {
		background-color: red;
		padding: 0.5em;
		color: white;
	}
	ul {
		padding-left: 0.5em;
	}
	li {
		list-style: none;
	}
}

/*** Header ***/

#header {
	margin-top: 0;
	padding: 0;
	width: 100%;
	background-color: #5DB774;
	@include box_sizing;
}

#logo {
	padding: 25px 0 25px;
	text-align: center;
	a {
		text-transform: uppercase;
		padding: 15px;
		text-decoration: none;
		font-size: 2em;
		color: #FFF;
		&:hover {
			color: #FFF;
		}
	}
}

#menu {
	margin: 0;
	padding: 0 0 1em;
	list-style: none;
	text-align: center;
	div.arrow-down {
		display: inline-block;
		width: 0; 
		height: 0; 
		border-left: 0.8em solid transparent;
		border-right: 0.8em solid transparent;
		border-top: 0.8em solid white;
	}
	> li {
		display: inline-block;
		margin-right: 0.5em;
		position: relative;
		&#user-options-dropdown {
			a {
				position: relative;
				left: 0.7em;
		  	padding-right: 1em;
			}
		}
		ul {
			padding: 0;
			width: 12em;
			position: absolute;
			top: 2.25em;
			background-color: #5DB774;
			text-align: left;
			list-style: none;
			display: none;	
			li {
				padding-top: 10px;
				padding-bottom: 10px;
			}
		}
	}
	a {
		padding: 5px;
		font-size: 1.5em;
		color: white;
	}		
}

.generic-links {
	width: 90%;
	margin: 1em auto 0;
	list-style: none;
	color: white;
	text-align: center;
	padding: 0;
	li {
		background-color: #5DB774;
		padding-top: 1em;
		padding-bottom: 1em;
		margin-bottom: 1em;
		border-radius: 1em;
		a {
			padding: 0.5em;
		}
		a:visited {
			color: white;
		}
	}
	a {
		font-size: 1em;
	}
}

/*** Breadcrumbs ***/

.breadcrumb {
	font-size: 1em;
}

/*** Messages and Alerts ***/

.alert-success,
.alert-error,
.alert-notice {
	padding: 0.5em;
	color: white;
	font-size: 1.25em;
	text-align: center;
	border-radius: 0.5em;
	@include box_sizing;
}
.alert-success {
	background-color: #3bff00;
}
.alert-error {
	background-color: red;
}
.alert-notice {
	background-color: red;
}

/*** Log In Form ***/

.login-form {
	font-size: 1.5em;
	width: 50%;
	margin: 1em auto 0;
	.submit-button {
		font-size: 1em;
	}
}

/*** New Listing Form ***/

#nested-price-fade-form {
	display: none;
	margin-bottom: 50px;
}

#nested-auction-form {
	margin-bottom: 50px;
}


#reserve-input {
	padding: 5px;
	width: 150px;
	@include box_sizing;
}


/*** Index Listings ***/

.all-listings {
	clear: both;
	@include box_sizing;
	margin-top: 1.5em; 
	.listing-index-container {
		width: 100%;
		margin: 0.5em 0 0.5em;
		border: 3px solid #000;
		border-radius: 10px;
		padding: 0;
		float: left;
		ul {
			list-style: none;
			margin: 0;
			padding: 0;
			li.sale-pending {
				color: red;
			}
		}
		.listing-image {
				width: 11em;
				height: 8em;
				float: left;
				padding: 1em;
				@include box_sizing;
				.listing-image-display img {
					width: 100%;
					border-radius: 5px;
					@include box_sizing;
				}
			}
		.listing-title-container {
			@include box_sizing;
			float: left;
			margin: 0 auto 0;
			.listing-title {
				font-size: 1.5em;
				width: 100%;	
				margin-top: 0.67em;	
				// padding-left: 0.66em;
				a {
					padding: 0.67em;
				}
			}
			.sell-method-details {
				width: 100%;
				font-size: 1em;	
				padding-left: 1em;	
				margin-top: 10px; 
			}
		
			
		}

		.listing-description {
			@include box_sizing;
			width: 100%;
			background-color: #DDD;
			border-radius: 10px;
			padding: 20px;
			margin-top: 20px;
			float: left;
		}

		.listing-footer {
			clear: both;
			padding: 10px;
			border-top: 2px solid #000;
			form {
				display: inline-block;
			}
			.posted-by {
				margin-right: 50px;
			}
		}
	}	
}

/*** Listings Show - Individual Listing Display ***/

.attribute {
	color: #40708E;
}

.individual-listing {
	@include box_sizing;
	margin-top: 1.5em;
	.title {
		@include box_sizing;
		font-size: 2em;
		width: 100%;
	}
	#main-listing-image {
		margin: 20px auto 0;
		.main-image-display {
			width: 100%;
		}
	}

	.thumbnail-display {
		width: 18%;
	}
	.description {
		margin: 20px 0 0;
		font-size: 1.25em;
	}
	.q-and-a {
		font-size: 1.25em;
		border: 3px solid #000;
		border-radius: 10px;
		padding: 0.25em;
		.ask-question-button {
			display: inline-block;
			position: relative;
			left: 1em;
			top: -0.3em;
			font-size: 0.5em;
		}
		.question {
			font-weight: bold;
		}
		.answer {
			margin-left: 15px;
		}
	}
	.question-button {
		font-size: 2em;
		margin: 20px 0 20px;
	}
	.listing-details {
		margin: 1em 0 0;
		ul {
			list-style: none;
			padding: 0;
		}
		li {
			font-size: 1.25em;	
			margin-top: 0.3em;
		}
	}
	table {
		margin-bottom: 1em;
		th,
		td {
			font-size: 1.5em;
			height: 1.6em;
			text-align: left;
		}
		.price-level {
			width: 100px;
		}
		.before-current-price, 
		.after-current-price {
			width: 10em;
		}
		.before-current-price {
			text-decoration: line-through;
		}
		.current-price {
			color: blue;
		}
	}
}



/*** Bids ***/

#bids-table {
	clear: both;
	margin-left: 20px;
	table {
		width: 90%;
		max-width: 800px;
	}
	th, td {
		text-align: center;
	}
	th {
		width: 15%;
		height: 30px;
		text-decoration: underline;
		&.listing-title {
			width: 25%;
		}
	}
	td {
		height: 25px;
	}
}

#bid-page {
	max-width: 800px;
	margin-left: 20px;
	.button-large {
		margin-top: 25px;
	}
}

/*** Category Listing And Creation ***/

#category-page {
	margin-left: 20px;
	clear: both;
}
#category-form-container {
	height: 200px;
	margin-top: 100px;
}

#category-table {
	td {
		font-size: 1.25em;
		width: 200px;
		height: 30px;
	}
}
#flash-message {
	.success {
		color: green;
	}
	.error {
		color: red;
	}
}

#new-category-form {
	display: none;
	.button-large {
		margin-top: 25px;
	}
}
#new-category-button {
	margin-top: 30px;
}

/*** Sub-Category Listing And Creation ***/

#new-subcategory-form {
	display: none;
	height: 100px;
	background-color: #999;
}

#all-categories-list {
	width: 95%;
	margin: 0 auto;
	clear: both;
	form {
		display: inline-block;
	}
	.category-heading {
		margin-top: 30px;
		border-radius: 15px;
		background-color: #40708E;
		font-size: 2em;
		a {
			color: white;
		}
		span {
			display: inline-block;
			padding: 10px;
		}
	}
	.add-subcategory {
		margin-top: 15px;
		font-size: 1.5em;
	}
	.all-subcategory-display {
		padding-left: 15px;
		font-size: 1.25em;
	}
}

.each-subcategory-display {
	margin-top: 10px;
	a {
		padding: 5px;
	}
}

/*** Images ***/

.file-upload-standin {
	margin-top: 2em;
	position: relative;
	#stand-in-button {
		margin-top: 0;
		position: absolute;
		top: 0;
		left: 0;
	}
	input[type=text] {
		margin-top: 2em;
		display: block;
		border: none;
		width: 100%;
	}
	input[type=file] {
		opacity: 0;
	}
}

#adding-pictures,
#image-crop {
	margin-left: 25px;
	.button-large {
		margin: 2em 0;
	}
	.all-thumbnails {
		display: inline-block;
		width: 10em;
		text-align: center;
		img {
			width: 100%;
		}
		
	}
}

// #listingpic {
// 	width: 18.75em;
// }

	

